--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,9 @@
             ],
             "styles": [
               "src/styles.css"
-            ],
-            "scripts": []
+          ],
+          "scripts": [
+          ]
           },
           "configurations": {
             "production": {
